--- a/solidagui/templates/base.html
+++ b/solidagui/templates/base.html
@@ -27,18 +27,18 @@
                 <li class="nav-item {% if request.path == '/' %} active{% endif %}">
                     <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item dropdown {% if 'pipelines' in request.path == '/' %} active{% endif %}">
+                <li class="nav-item dropdown {% if 'pipelines' in request.path %} active{% endif %}">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarPipelines" role="button"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Pipelines
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarPipelines">
-                        <a class="dropdown-item" href="#">Browse</a>
+                        <a class="dropdown-item" href="{% url 'pipelines.browse' %}">Browse</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Adda new</a>
                     </div>
                 </li>
-                 <li class="nav-item dropdown {% if 'profiles' in request.path == '/' %} active{% endif %}">
+                 <li class="nav-item dropdown {% if 'profiles' in request.path %} active{% endif %}">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarProfiles" role="button"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Profiles
@@ -49,10 +49,10 @@
                         <a class="dropdown-item" href="#">Adda new</a>
                     </div>
                 </li>
-                 <li class="nav-item {% if 'docs' in request.path == '/' %} active{% endif %}">
+                 <li class="nav-item {% if 'docs' in request.path %} active{% endif %}">
                     <a class="nav-link" href="#">Docs <span class="sr-only">(current)</span></a>
                 </li>
-                 <li class="nav-item {% if 'about' in request.path == '/' %} active{% endif %}">
+                 <li class="nav-item {% if 'about' in request.path %} active{% endif %}">
                     <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
                 </li>
             </ul>
