--- a/solidagui/templates/pipelines/browse.html
+++ b/solidagui/templates/pipelines/browse.html
@@ -1,11 +1,15 @@
 {% extends 'base.html' %}
 
+{% load pagination_tags %}
+
 {% block content %}
+{% autopaginate pipelines 2 %}
+
 {% for pp in pipelines  %}
 <div class="row">
     <div class="card-deck">
         {% for p in pp %}
-        <div class="col-sm-6" style="margin-top:20px;">
+        <div class="col-sm-6" style="margin-bottom:20px;">
             <div class="card border-light" style="width: 30rem; height: 15rem;">
                 <div class="card-header"><h5><a href="{{ p.url }}" target="_blank"> {{ p.short_url }}</a></h5></div>
                 <div class="card-body">
@@ -23,6 +27,10 @@
     </div>
 </div>
 {% endfor %}
+<div style="margin-top:25px;">
+{% paginate %}
+</div>
+
 
 {% endblock %}
 
