--- a/solidagui/templates/home.html
+++ b/solidagui/templates/home.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="row">
   <div class="col-sm-6">
-    <div class="card border-primary mb-5" style="max-width: 100rem;">
+    <div class="card border-primary" style="max-width: 100rem;">
         <div class="card-body">
             <h4 class="card-title">SOLIDA</h4>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -12,7 +12,7 @@
     </div>
   </div>
     <div class="col-sm-6">
-    <div class="card border-primary mb-5" style="max-width: 100rem;">
+    <div class="card border-primary" style="max-width: 100rem;">
        <div class="card-body">
             <h4 class="card-title">solida-core</h4>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -21,18 +21,18 @@
     </div>
     </div>
 </div>
-<div class="row">
+<div class="row mt-4">
     <div class="col-sm-4">
-        <div class="card border-success mb-2" style="max-width: 100rem;">
+        <div class="card border-success" style="max-width: 100rem;">
         <div class="card-header">Pipelines</div>
         <div class="card-body">
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <button type="button" class="btn btn-success">Browse</button>
+            <a href="{% url 'pipelines.browse' %}" class="btn btn-success">Browse</a>
         </div>
     </div>
     </div>
      <div class="col-sm-4">
-         <div class="card border-success mb-2" style="max-width: 100rem;">
+         <div class="card border-success" style="max-width: 100rem;">
         <div class="card-header">Profiles</div>
         <div class="card-body">
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -41,7 +41,7 @@
     </div>
      </div>
      <div class="col-sm-4">
-         <div class="card border-success mb-2" style="max-width: 100rem;">
+         <div class="card border-success" style="max-width: 100rem;">
         <div class="card-header">Docs</div>
         <div class="card-body">
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
