--- a/solidagui/templates/pipelines/browse.html
+++ b/solidagui/templates/pipelines/browse.html
@@ -9,25 +9,23 @@
 <div class="row">
     <div class="card-deck">
         {% for p in pp %}
-        <div class="col-sm-6" style="margin-bottom:20px;">
-            <div class="card border-light" style="width: 30rem; height: 15rem;">
+        <div class="col-sm-6 mb-4">
+            <div class="card border-primary" style="width: 35rem; height: 15rem;">
                 <div class="card-header"><h5><a href="{{ p.url }}" target="_blank"> {{ p.short_url }}</a></h5></div>
                 <div class="card-body">
-                    <h4 class="card-title">{{ p.label }}</h4>
+                    <h4 class="card-title">{{ p.id }}</h4>
                     <p class="card-text">{{ p.description }}</p>
-
                 </div>
                 <div class="card-footer bg-light">
-                    <a class="btn btn-primary" href="/pipelines/{{ p.label }}">Setup & Deploy</a>
+                    <a class="btn btn-primary" href="/pipelines/{{ p.id }}/setup">Setup & Deploy</a>
                 </div>
-
             </div>
         </div>
         {% endfor %}
     </div>
 </div>
 {% endfor %}
-<div style="margin-top:25px;">
+<div>
 {% paginate %}
 </div>
 
