--- a/solidagui/templates/home.html
+++ b/solidagui/templates/home.html
@@ -1,53 +1,78 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="row">
-  <div class="col-sm-6">
-    <div class="card border-primary" style="max-width: 100rem;">
-        <div class="card-body">
-            <h4 class="card-title">SOLIDA</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <button type="button" class="btn btn-primary">View source</button>
+<div class="row pr-3 pl-3">
+        <div class="col-sm-4 text-center pt-2 border border-primary rounded-left" style="width:50rem;">
+            <h1><kbd>s o l i d a</kbd></h1>
         </div>
-    </div>
-  </div>
-    <div class="col-sm-6">
-    <div class="card border-primary" style="max-width: 100rem;">
-       <div class="card-body">
-            <h4 class="card-title">solida-core</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <button type="button" class="btn btn-primary">View repo</button>
+        <div class="col-sm-8 bg-primary text-justify pt-2  border border-primary rounded-right" style="width:50rem;">
+            <p>solida is a powerful solution that facilitate the reproducibility
+            and portability of NGS pipelines.</p>
+             <p><h6>It can easily organize the deployment, the data management and the
+            execution of a Snakemake based workflow.</h6> </p>
         </div>
-    </div>
-    </div>
 </div>
-<div class="row mt-4">
-    <div class="col-sm-4">
-        <div class="card border-success" style="max-width: 100rem;">
-        <div class="card-header">Pipelines</div>
-        <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <a href="{% url 'pipelines.browse' %}" class="btn btn-success">Browse</a>
+<div class="row mt-3">
+    <div class="col-sm-6">
+        <div class="card border-primary" style="max-width: 100rem; height:33rem;">
+            <div class="card-header bg-primary lead">checkmate in 3 moves</div>
+            <div class="card-body">
+                <p class="card-text lead mt-5">
+                <h3><span class="badge badge-primary ml-5 mr-2">1</span>Select the pipeline</h3>
+                </p>
+                 <p class="card-text lead mt-5">
+                <h3><span class="badge badge-primary ml-5 mr-2">2</span>Fill the parameters</p>
+                 <p class="card-text lead mt-5">
+                    <h3><span class="badge badge-primary ml-5 mr-2">3</span>Deploy</p>
+            </div>
+            <div class="card-footer bg-light text-center">
+                <a  href="{% url 'pipelines.browse' %}" class="btn btn-success btn-lg btn-block">Start</a>
+            </div>
         </div>
     </div>
-    </div>
-     <div class="col-sm-4">
-         <div class="card border-success" style="max-width: 100rem;">
-        <div class="card-header">Docs</div>
-        <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <button type="button" class="btn btn-success">Browse</button>
+    <div class="col-sm-6">
+        <div class="card border-primary  bg-light" style="max-width: 100rem; height:16rem;">
+            <div class="card-header bg-primary lead">solida-core</div>
+            <div class="card-body">
+                <p class="card-text text-justify">solida-core is a robust, and ready-to-use collection of extensively
+                    validated bioinformatic pipelines which are routinely used for complex large-scale genetic analysis
+                    at the CRS4 <a href="http://next.crs4.it" target="_blank">Next Generation Sequencing Core
+                        Facility</a>, one of the largest sequencing facilities in Italy.</p>
+            </div>
+            <div class="card-footer bg-light text-right">
+                <a href="https://github.com/solida-core" class="btn btn-primary" target="_blank">View</a>
+            </div>
+        </div>
+        <div class="card border-primary bg-light mt-3" style="max-width: 100rem; height:16rem;">
+             <div class="card-header bg-primary lead">pipelines</div>
+            <div class="card-body">
+                <p class="card-text text-justify">
+                    All <a href="https://github.com/solida-core" target="_blank">solida-core</a>
+                    workflows follow GATK Best Practices for Germline Variant Discovery,
+                    with the incorporation of further improvements and refinements after their testing with real data
+                    in various <a href="http://next.crs4.it" target="_blank">CRS4 Next Generation Sequencing Core Facility</a>
+                    research sequencing projects.
+                </p>
+            </div>
+            <div class="card-footer bg-light text-right">
+                <a href="https://github.com/solida-core" class="btn btn-primary" target="_blank">View</a>
+            </div>
         </div>
     </div>
-     </div>
-     <div class="col-sm-4">
-         <div class="card border-success" style="max-width: 100rem;">
-        <div class="card-header">About</div>
-        <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <button type="button" class="btn btn-success">Browse</button>
-        </div>
-    </div>
-     </div>
 </div>
 {% endblock %}
+
+<div class="row">
+    <div class="col-sm-12">
+         <div class="card border-primary" style="max-width: 100rem; height:15rem;">
+             <div class="card-header bg-primary">
+                 <h1><span class="badge  badge-light">s o l i d a</span></h1>
+             </div>
+            <div class="card-body bg-primary" style="line-height:3rem;">
+                <p class="card-text text-justify lead pr-5 pl-5">solida is a powerful solution that facilitate the reproducibility
+                    and portability of NGS pipelines. It can easily organize the deployment, the data management and the
+                    execution of a Snakemake based workflow.</p>
+            </div>
+        </div>
+    </div>
+</div>
