--- a/solidagui/templates/pipelines/browse.html
+++ b/solidagui/templates/pipelines/browse.html
@@ -11,12 +11,12 @@
         {% for p in pp %}
         <div class="col-sm-6 mb-4">
             <div class="card border-primary" style="width: 35rem; height: 15rem;">
-                <div class="card-header"><h5><a href="{{ p.url }}" target="_blank"> {{ p.short_url }}</a></h5></div>
-                <div class="card-body">
+                <div class="card-header bg-primary lead"><a href="{{ p.url }}" target="_blank" class="text-white"> {{ p.short_url }}</a></div>
+                <div class="card-body bg-secondary">
                     <h4 class="card-title">{{ p.id }}</h4>
                     <p class="card-text">{{ p.description }}</p>
                 </div>
-                <div class="card-footer bg-light">
+                <div class="card-footer bg-secondary text-right">
                     <button class="btn btn-primary" onclick="goto('{{ p.id }}');">Setup & Deploy</button>
                 </div>
             </div>
